Only Pong Report left

--- a/CartPole/CartPole_PG.ipynb
+++ b/CartPole/CartPole_PG.ipynb
@@ -881,43 +881,8 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 335
-        },
-        "id": "OuYpA2lpOQN9",
-        "outputId": "1c03d876-35fe-4e96-ba3e-0e4d26ca5ee8"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Running with batch size = 8\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/jupyter_client/session.py:203: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-            "  return datetime.utcnow().replace(tzinfo=utc)\n"
-          ]
-        },
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<string>, line 1)",
-          "output_type": "error",
-          "traceback": [
-            "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-            "  File \u001b[1;32m\"/usr/local/lib/python3.12/dist-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3553\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-3935293384.py\"\u001b[0;36m, line \u001b[0;32m37\u001b[0;36m, in \u001b[0;35m<cell line: 0>\u001b[0;36m\u001b[0m\n\u001b[0;31m    rewards = eval(result.stdout.split(\"Mean rewards per iteration: \")[-1])\u001b[0m\n",
-            "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Environment: CartPole-v1\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "metadata": {},
+      "outputs": [],
       "source": [
         "%%writefile CartPole-PG-c.py\n",
         "\n",
@@ -978,6 +943,87 @@
       "outputs": [],
       "source": [
         "# run the python CMD via CLI\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(a)\n",
+        "\n",
+        "A random agent in the CartPole-v1 Gym environment receives consistently low and volatile rewards, usually between 15 and 28 per episode across many iterations, means the agent cannot learn or exploit the environment, leading to frequent failure in balancing the pole. Occasional higher rewards occur only by chance.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![Random Agent Performance](part(a)/CartPole-v1_500_16_random_agent.png)\n",
+        "<center>Figure-1: Rewards per episode for a random agent in CartPole-v1 environment over 500\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(b)\n",
+        "\n",
+        "- Advantage Normalization speeds up learning and makes it more stable, helping the model hit near-optimal performance pretty quickly.\n",
+        "\n",
+        "- Reward-to-Go boosts performance too, but without advantage normalization, things get shaky, with some drops due to high variance.\n",
+        "\n",
+        "- No Reward-to-Go leads to a bumpy ride, with performance dropping a lot, showing that it's less efficient and struggles with variance.\n",
+        "\n",
+        "- Combining Both gives the best results, with faster learning, less fluctuation, and overall smoother training.\n",
+        "\n",
+        "- Advantage Normalization on its own is the best for stabilizing things, especially in noisy environments like CartPole-v1.\n",
+        "\n",
+        "- Without Either, you get a lot of instability, with performance going up and down, and it’s hard to maintain high returns.\n",
+        "\n",
+        "---\n",
+        "![rTaT](part(b)/CartPole-v1_PG_iters500_bs5000_g_lr_rtg_advnorm_.png)\n",
+        "![rTaF](part(b)/CartPole-v1_PG_iters500_bs5000_g_lr_rtg_noadv_.png)\n",
+        "![rFaT](part(b)/CartPole-v1_PG_iters500_bs5000_g_lr_tot_advnorm_.png)\n",
+        "![rFaF](part(b)/CartPole-v1_PG_iters500_bs5000_g_lr_tot_noadv_.png)\n",
+        "<center>Figure-2,3,4,5: Average Return over 500 episodes for 5000 as batch size with different combinations of Reward-to-Go and Advantage Normalization\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(c)\n",
+        "\n",
+        "- Small Batch (bs=50) is super noisy-lots of ups and downs, takes longer to stabilize, and even after a lot of training, the agent can still mess up.\n",
+        "\n",
+        "- Medium Batch (bs=500) smooths things out a bit-faster and more reliable learning, but still some random dips later on.\n",
+        "\n",
+        "- Large Batch (bs=5000) is the smoothest-consistent, stable, and hits optimal performance without big drops.\n",
+        "\n",
+        "- Smaller batches update faster but with higher variance, making it more unstable in the long run time.\n",
+        "\n",
+        "- Larger batches cut down on gradient noise, making the learning process steadier and more reliable.\n",
+        "\n",
+        "- Big trade-off: small batches are faster but unstable, while large batches are slower but way more consistent.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![bs50](part(c)/CartPole-v1_PG_iters500_bs50_g_lr_rtg_advnorm_.png)\n",
+        "![bs500](part(c)/CartPole-v1_PG_iters500_bs500_g_lr_rtg_advnorm_.png)\n",
+        "![bs5000](part(c)/CartPole-v1_PG_iters500_bs5000_g_lr_rtg_advnorm_.png)\n",
+        "<center>Figure-6,7,8: Average Return over 500 episodes for different batch sizes with Reward-to-Go and Advantage Normalization enabled\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---"
       ]
     }
   ],
