--- a/LunarLander/Lunarlander_PG.ipynb
+++ b/LunarLander/Lunarlander_PG.ipynb
@@ -486,6 +486,82 @@
       "source": [
         "# run the python CMD via CLI\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(a)\n",
+        "\n",
+        "A random agent in LunarLander-v3 consistently receives low, negative rewards with fluctuating values, showing that random actions just lead to frequent crashes or failed landings\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![Random Agent Performance](part(a)/LunarLander-v3_50_16_random_agent.png)\n",
+        "<center>Figure-1: Rewards per episode for a random agent in LunarLander-v3 environment over 50 episodes\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(b)\n",
+        "\n",
+        "- Reward-to-Go (RTG) makes the agent learn faster, hitting higher returns quickly and avoiding those annoying plateaus that total-return methods can get stuck in.\n",
+        "\n",
+        "- Advantage Normalization (AdvNorm) smooths out the learning curve, cutting down on instability and making the whole process more reliable, so the agent gets better results overall.\n",
+        "\n",
+        "- RTG + AdvNorm is the best-it leads to fast learning, steady performance, and consistently high returns (200+).\n",
+        "\n",
+        "- RTG without AdvNorm still does okay, but it's a little less stable, with some dips and slower recovery compared to when both methods are combined.\n",
+        "\n",
+        "- No RTG method + without advantage normalization are the least stable-they often regress mid-training and struggle with learning.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![rTaT](part(b)/LunarLander-v3_PG_iters1200_bs800_g_lr_rtg_advnorm_.png)\n",
+        "![rTaF](part(b)/LunarLander-v3_PG_iters1200_bs800_g_lr_rtg_noadv_.png)\n",
+        "![rFaT](part(b)/LunarLander-v3_PG_iters1200_bs800_g_lr_tot_advnorm_.png)\n",
+        "![rFaF](part(b)/LunarLander-v3_PG_iters1200_bs800_g_lr_tot_noadv_.png)\n",
+        "<center>Figure-2,3,4,5: Average Return over 1200 episodes for 800 as batch size with different combinations of Reward-to-Go and Advantage Normalization\n",
+        "</center>\n",
+        "\n",
+        "--- \n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(c)\n",
+        "\n",
+        "- Small Batch (bs=80) is bumpy rewards-lots of noise, so the agent barely makes progress. It’s basically learning from unstable, messy updates. And the max return hovers around 0 (1200 episodes).\n",
+        "\n",
+        "- Medium Batch (bs=800) smooths things out-less noise, faster learning, and the agent hits around 200 returns. \n",
+        "\n",
+        "- Large Batch (bs=8000) is the smoothest ride with high, consistent returns (250-300), but it’s slower to converge because the agent updates less often.\n",
+        "\n",
+        "- Bigger batches = smoother, slower, and more stable. Smaller batches = faster, risky convergence.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![bs80](part(c)/LunarLander-v3_PG_iters1200_bs80_g_lr_rtg_advnorm_.png)\n",
+        "![bs800](part(c)/LunarLander-v3_PG_iters1200_bs800_g_lr_rtg_advnorm_.png)\n",
+        "![bs8000](part(c)/LunarLander-v3_PG_iters1200_bs8000_g_lr_rtg_advnorm_.png)\n",
+        "<center>Figure-6,7,8: Average Return over 1200 episodes for different batch sizes with Reward-to-Go and Advantage Normalization enabled\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---"
+      ]
     }
   ],
   "metadata": {
