Only Pong-part(b) Report left

--- a/Pong/Pong_DQN.ipynb
+++ b/Pong/Pong_DQN.ipynb
@@ -93,29 +93,8 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 383
-        },
-        "id": "3tZy7D1L5Jw3",
-        "outputId": "e1e38122-201e-405e-cb38-55eb707c2e8b"
-      },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'gymnasium.wrappers.atari'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-6-3589130860.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgymnasium\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgymnasium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrappers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAtariPreprocessing\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mResizeObservation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgymnasium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrappers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matari\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mFrameStack\u001b[0m  \u001b[0;31m# Correct location for FrameStack\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgymnasium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrappers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGrayscaleObservation\u001b[0m  \u001b[0;31m# Correct name for Grayscale wrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gymnasium.wrappers.atari'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ],
+      "metadata": {},
+      "outputs": [],
       "source": [
         "import os\n",
         "import numpy as np\n",
@@ -635,6 +614,40 @@
         "    print(\"\\n\" + \"=\" * 70)\n",
         "    print(\"Evaluating Trained Agent\")\n",
         "    eval_rewards = evaluate_agent(results['agent'], num_episodes=1000)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(a)\n",
+        "\n",
+        "- The random agent just keeps getting worse, losing more and more over both short (5) and longer (15) episodes in Pong-v5. No sign of improvement.\n",
+        "\n",
+        "- Flat Rewards with Little Variation: The rewards look predictable and follow a stair-step pattern (since Pong rewards are either -1 or +1 according to atari games documentation). The random agent mostly ends up with negative rewards, and there’s not much change from one episode to the next.\n",
+        "\n",
+        "- Mostly Negative Scores: At the end of each episode, the agent’s cumulative score is usually between -15 and -21. $\\to$ it’s bad no matter the length of the episode.\n",
+        "\n",
+        "---\n",
+        "![5ep Random Agent](part(a)/pong_5_random_agent_rewards.png)\n",
+        "![15ep Random Agent](part(a)/pong_15_random_agent_rewards.png)\n",
+        "\n",
+        "<center>Figure 1: Rewards obtained by a random agent in Pong over 5 and 15 episodes.</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(b)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "---"
       ]
     }
   ],
