--- a/Pong/Pong_DQN.ipynb
+++ b/Pong/Pong_DQN.ipynb
@@ -133,6 +133,7 @@
         "\n",
         "\n",
         "class FramePreprocessor:\n",
+        "\n",
         "    def __init__(self, width=84, height=84):\n",
         "        self.width = width\n",
         "        self.height = height\n",
@@ -145,7 +146,7 @@
         "            gray = frame\n",
         "            \n",
         "        # Resize to 84x84\n",
-        "        resized = cv2.resize(gray, (self.width, self.height), \n",
+        "        resized = cv2.resize(gray, (self.width, self.height),\n",
         "                           interpolation=cv2.INTER_AREA)\n",
         "        \n",
         "        # Normalize to [0, 1]\n",
@@ -154,7 +155,8 @@
         "        return normalized\n",
         "\n",
         "\n",
-        "class FrameStack:    \n",
+        "class FrameStack: \n",
+        "\n",
         "    def __init__(self, num_frames=4):\n",
         "        self.num_frames = num_frames\n",
         "        self.frames = deque(maxlen=num_frames)\n",
@@ -361,7 +363,6 @@
         "    mean_rewards = []\n",
         "    best_mean_reward = -float('inf')\n",
         "    episode = 0\n",
-        "    \n",
         "\n",
         "    print(\"\\t\\t...Starting training...\")\n",
         "    print(f\"Total training steps: {total_steps:,}\")\n",
@@ -506,12 +507,12 @@
         "    \n",
         "    # Plot mean n-episode rewards\n",
         "    if mean_rewards:\n",
-        "        mean_steps = steps_per_episode[n_episodes-1:]\n",
-        "        ax1.plot(mean_steps, mean_rewards, color='red', linewidth=1, \n",
+        "        mean_steps = steps_per_episode[n_episodes - 1:]\n",
+        "        ax1.plot(mean_steps, mean_rewards, color='red', linewidth=1,\n",
         "                label=f'Mean {n_episodes}-Episode Reward')\n",
         "        \n",
         "        # Plot best mean reward line\n",
-        "        ax1.axhline(y=best_mean_reward, color='green', linestyle='--', \n",
+        "        ax1.axhline(y=best_mean_reward, color='green', linestyle='--',\n",
         "                   linewidth=2, label=f'Best Mean Reward: {best_mean_reward:.2f}')\n",
         "    \n",
         "    ax1.set_xlabel('Time Steps (x 1000)', fontsize=12)\n",
@@ -521,7 +522,7 @@
         "    ax1.grid(True, alpha=0.3)\n",
         "    \n",
         "    # Format x-axis to show in thousands\n",
-        "    ax1.ticklabel_format(axis='x', style='scientific', scilimits=(0,0))\n",
+        "    ax1.ticklabel_format(axis='x', style='scientific', scilimits=(0, 0))\n",
         "    \n",
         "    # Plot 2: Training loss\n",
         "    ax2 = axes[1]\n",
@@ -532,7 +533,7 @@
         "        ax2.set_ylabel('Loss', fontsize=12)\n",
         "        ax2.set_title('Training Loss', fontsize=14)\n",
         "        ax2.grid(True, alpha=0.3)\n",
-        "        ax2.ticklabel_format(axis='x', style='scientific', scilimits=(0,0))\n",
+        "        ax2.ticklabel_format(axis='x', style='scientific', scilimits=(0, 0))\n",
         "    \n",
         "    plt.tight_layout()\n",
         "    plt.savefig('dqn_pong_learning_curves.png', dpi=300, bbox_inches='tight')\n",
@@ -599,13 +600,22 @@
         "    training_steps = 2500000\n",
         "    \n",
         "    print(f\"\\nStarting training with {training_steps:,} steps...\")\n",
-        "\n",
         "    \n",
         "    # Train agent\n",
         "    results = train_dqn(total_steps=training_steps, max_steps_per_episode=10000)\n",
         "    print(\" Training Complete!\")\n",
         "    print(f\"Best Mean Reward (100 ep): {results['best_mean_reward']:.2f}\")\n",
         "    print(f\"Total Episodes: {len(results['episode_rewards'])}\")\n",
+        "    \n",
+        "    # Save results to a .npz file\n",
+        "    np.savez('dqn_pong_results.npz',\n",
+        "             episode_rewards=results['episode_rewards'],\n",
+        "             episode_lengths=results['episode_lengths'],\n",
+        "             losses=results['losses'],\n",
+        "             mean_rewards=results['mean_rewards'],\n",
+        "             best_mean_reward=results['best_mean_reward'],\n",
+        "             total_steps=results['total_steps'])\n",
+        "    print(\"\\nResults saved to 'dqn_pong_results.npz'\")\n",
         "    \n",
         "    # Plot learning curves\n",
         "    plot_learning_curves(results, n_episodes=100)\n",
@@ -632,7 +642,7 @@
         "![5ep Random Agent](part(a)/pong_5_random_agent_rewards.png)\n",
         "![15ep Random Agent](part(a)/pong_15_random_agent_rewards.png)\n",
         "\n",
-        "<center>Figure 1: Rewards obtained by a random agent in Pong over 5 and 15 episodes.</center>\n",
+        "<center>Figure-1: Rewards obtained by a random agent in Pong over 5(top) and 15(bottom) episodes.</center>\n",
         "\n",
         "---\n",
         "\n",
@@ -645,9 +655,49 @@
       "source": [
         "# Part(b)\n",
         "\n",
+        "**Note :** \n",
+        "\n",
+        "> The trained DQN had checkpoints saved for every 0.25M steps up to 2.5M steps.  \n",
+        "During the 1st run, the agent was trained for 1M steps and it's performance was plotted as below, where the best mean reward until then was -10.22 for a running average of 100 episodes.\n",
+        "\n",
+        "![1Msteps DQN Agent](part(b)/dqn_pong_learning_curves_1M.png)\n",
+        "<center>\n",
+        "Figure 2: Learning curve of DQN agent trained for 1M steps in Pong.  <br>\n",
+        "Avg-return curve(top), Training loss curve(bottom).\n",
+        "</center>\n",
+        "\n",
+        "---\n",
+        "\n",
+        "> After that, due to computational constraints, the agent had to train for each checkpoint seperately for the next 1.5M steps (i.e from 1M to 2.5M steps). The model weights and training states are stored at [dqn_pong_step_25L.pth](part(b)/dqn_pong_step_25L.pth) and [dqn_pong_final.pth](part(b)/dqn_pong_final.pth) (both are same to be honest).  \n",
+        "The issue here is, the training has been done, but the learning curves could not be recorded because the training for each checkpoint was done seperately and not in a sinlgle run for many steps(like in 1M).  \n",
+        "\n",
+        "> So, the model was trained for anothe 0.1M steps(from 2.5M to 2.6M) to get the learning curves as shown below. The best mean reward until then was 7 for a running average for 10 episodes for a total of 40 new episodes. hence the learning curve for this 0.1M steps shown below is only for reference to show the improvement in performance after 2.5M steps.\n",
+        "\n",
+        "> To further evaluate the performance of the DQN agent, it was tested for 100 episodes and the rewards obtained are shown in the file [evaluation.txt](part(b)/evaluation.txt). The agent performs significantly better than the random agent, winning most of the episodes with positive rewards.  \n",
+        "The final model results are saved @ [dqn_pong_results.npz](part(b)/dqn_pong_results.npz).\n",
+        "\n",
+        "Thus the trainined model performed good and can do better for many more training steps(to 8M to touch max reward almost as close as 21.0) starting from the latest checkpoint(of 2.5M steps)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "![0.1Msteps DQN Agent](part(b)/dqn_pong_learning_curves_26L.png)\n",
+        "<center>\n",
+        "Figure-3: Learning curve of DQN agent trained for an additional 0.1M steps in Pong(after 2.5M steps).  <br>\n",
+        "Avg-return curve(top), Training loss curve(bottom).\n",
+        "</center>\n",
+        "\n",
         "---\n",
         "\n",
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part(c)\n",
+        "\n",
+        "## Unfortunate training contraints couldn't be met for doing part(c) as adviced by sir as well"
       ]
     }
   ],
