--- a/Pong/Pong_DQN.ipynb
+++ b/Pong/Pong_DQN.ipynb
@@ -671,7 +671,7 @@
         "> After that, due to computational constraints, the agent had to train for each checkpoint seperately for the next 1.5M steps (i.e from 1M to 2.5M steps). The model weights and training states are stored at [dqn_pong_step_25L.pth](part(b)/dqn_pong_step_25L.pth) and [dqn_pong_final.pth](part(b)/dqn_pong_final.pth) (both are same to be honest).  \n",
         "The issue here is, the training has been done, but the learning curves could not be recorded because the training for each checkpoint was done seperately and not in a sinlgle run for many steps(like in 1M).  \n",
         "\n",
-        "> So, the model was trained for anothe 0.1M steps(from 2.5M to 2.6M) to get the learning curves as shown below. The best mean reward until then was 7 for a running average for 10 episodes for a total of 40 new episodes. hence the learning curve for this 0.1M steps shown below is only for reference to show the improvement in performance after 2.5M steps.\n",
+        "> So, the model was trained for another 0.1M steps(from 2.5M to 2.6M) to get the learning curves as shown below. The best mean reward until then was 7 for a running average for 10 episodes for a total of 40 new episodes. hence the learning curve for this 0.1M steps shown below is only for reference to show the improvement in performance after 2.5M steps.\n",
         "\n",
         "> To further evaluate the performance of the DQN agent, it was tested for 100 episodes and the rewards obtained are shown in the file [evaluation.txt](part(b)/evaluation.txt). The agent performs significantly better than the random agent, winning most of the episodes with positive rewards.  \n",
         "The final model results are saved @ [dqn_pong_results.npz](part(b)/dqn_pong_results.npz).\n",
@@ -697,7 +697,7 @@
       "source": [
         "# Part(c)\n",
         "\n",
-        "## Unfortunate training contraints couldn't be met for doing part(c) as adviced by sir as well"
+        "## Unfortunate training contraints couldn't be met for doing part(c) & as adviced by sir in the Problem-statement"
       ]
     }
   ],
